Pie Chart and Bar Chart functionality done

--- a/src/app/Components/Charts/pie/pie.component.html
+++ b/src/app/Components/Charts/pie/pie.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="chart my-4">
     <div>
       <div class="chart">
         <canvas baseChart
@@ -8,12 +8,13 @@
           [options]="pieChartOptions"
           [plugins]="pieChartPlugins"
           [colors]="pieChartColors"
-          [legend]="pieChartLegend">
+          [legend]="pieChartLegend"
+          width="400" height="400">
         </canvas>
       </div>
     </div>
   </div>
-  <div>
-    <button mat-button mat-raised-button color="primary" (click)="pieChartLegend=!pieChartLegend">Toggle Legend</button>
-    <button mat-button mat-raised-button color="primary" (click)="changeLegendPosition()">Change Legend Position</button>
+  <div class="buttons my-2">
+    <button mat-button mat-raised-button class="btn btn-dark mx-1" color="primary" (click)="pieChartLegend=!pieChartLegend">Toggle Legend</button>
+    <button mat-button mat-raised-button class="btn btn-dark" color="primary" (click)="changeLegendPosition()">Change Legend Position</button>
   </div>
