--- a/src/app/Components/chart/chart.component.html
+++ b/src/app/Components/chart/chart.component.html
@@ -1,8 +1,10 @@
 <div class="chartButtons my-2">
     <button type="button" class="btn btn-primary" id="pie" (click)='pie()'>Pie</button>
     <button type="button" class="btn btn-primary mx-1" id="bar" (click)='bar()'>Bar</button>
-    <button type="button" class="btn btn-primary" id="stack" (click)='stack()'>Stacked Bar</button>
 </div>
 <div *ngIf='pieData && pieclicked'>
     <app-pie [(pieData)]='pieData'></app-pie>
+</div>
+<div *ngIf='barData && barclicked'>
+    <app-bar [(barData)]='barData'></app-bar>
 </div>
