--- a/src/app/Components/Charts/pie/pie.component.html
+++ b/src/app/Components/Charts/pie/pie.component.html
@@ -1,4 +1,4 @@
-<div class="chart my-4" style="position: relative; height: 1000px">
+<div class="chart my-4" style="position: relative; height: 70vh">
       <canvas baseChart
         [data]="pieChartData"
         [labels]="pieChartLabels"
