--- a/src/app/Components/Charts/bar/bar.component.scss
+++ b/src/app/Components/Charts/bar/bar.component.scss
@@ -1,4 +1,5 @@
-.buttons{
-    display: flex;
-    justify-content: center;
+canvas{
+    width: auto !important;
+    height: auto !important;
+    overflow: scroll;
 }
