--- a/src/app/Components/Charts/pie/pie.component.scss
+++ b/src/app/Components/Charts/pie/pie.component.scss
@@ -3,6 +3,7 @@
     justify-content: center;
 }
 canvas{
-    width: 100% !important;
+    width: auto !important;
     height: auto !important;
+    overflow: scroll;
 }
